# monotrip-agent

./: .gitignore  CLAUDE.md  PR_DESCRIPTION.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_baseline.py  1a24eb872fa6_add_expo_push_token_to_users.py  364386175efc_add_destination_to_trips.py  6ae1afe5b308_convert_images_to_jsonb.py  9e9b7e787198_initial_tables.py  a1b2c3d4e5f6_add_user_preference_embedding.py  a3b8e2f4c7d6_add_faqs.py  a5e1d8c3b4f0_add_moderation_fields.py  accce84b59d8_add_share_token_expires_at.py  ad1a0564de1e_add_refresh_tokens.py  add_location_embeddings_add_location_embeddings_pgvector.py  b6ea4133a1ce_add_saved_places_checklist_location_.py  b6f2d4e9c7a3_add_location_version.py  b7e2f9a3c1d0_add_flight_price_alerts.py  b9d4f1a8e2c7_add_coupons.py  c1a7d9e3b2f0_add_curated_places.py  c1e7a5b3f9d8_add_offline_guides.py  c8f3e1a9d2b0_add_live_feed_fields.py  c9a4b1e7f6d2_add_oauth_fields.py  d2b3e9f7a4c1_add_price_snapshots.py  d4e8f2a9c3b1_add_user_badges.py  d8b3f6a1c4e2_add_direct_messages.py  e1f5a3d8b2c0_add_user_role.py  e8c4a1f2b9d3_add_trip_collaborators.py  f3d9b7e2c4a1_add_community.py  f7a2c3d9e1b4_add_notices.py
backend/app/: config.py  database.py  limiter.py  main.py
backend/app/dependencies/: auth.py
backend/app/routes/: ai.py  (+20 more)
backend/scripts/: create_admin.py  embed_curated_places.py  init_db.py  make_admin.py  seed_curated_places.py
backend/tests/: conftest.py  test_agoda_provider.py  test_ai.py  test_amadeus_provider.py  test_auth.py  test_checklist.py  test_collaboration.py  test_community.py  test_coupons.py  test_direct_messages.py  test_faqs.py  test_gamification.py  test_metasearch.py  test_notices.py  test_offline_guides.py  test_realtime.py  test_redis_cache.py  test_redis_lock.py  test_rental_cars.py  test_saved_places.py  test_tours.py  test_trips.py
(+252 files in other folders)
